# ubuntu-elgato-facecam

./: .gitignore  CLAUDE.md  LICENSE  README.md  install-desktop-app.sh  install.sh  pyproject.toml  test-desktop-app.sh  test_basic.py  uninstall-desktop-app.sh  uninstall.sh  virtualcam_app.py
.github/workflows/: ci.yml
src/: elgato-virtualcam.service  elgato-virtualcam.sh
tray-controller/: README.md  virtualcam-tray.py
