[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elgato-virtualcam"
version = "2.0.0"
description = "Elgato Facecam Virtual Camera Desktop Application for Linux"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Stannard Labs"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PyQt5>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/stannardlabs/ubuntu-elgato-facecam"
"Bug Reports" = "https://github.com/stannardlabs/ubuntu-elgato-facecam/issues"
"Source" = "https://github.com/stannardlabs/ubuntu-elgato-facecam"

[project.scripts]
elgato-virtualcam = "virtualcam_app:main"

[project.gui-scripts]
elgato-virtualcam-gui = "virtualcam_app:main"

[tool.setuptools]
py-modules = ["virtualcam_app"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]  # allow assert False in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true